# GUI

./: CMakeLists.txt  icons.qrc  mainscene.cpp  mainscene.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  sceneview.cpp  sceneview.h
figures/: colorlabel.h  connectorgraphicitem.cpp  connectorgraphicitem.h  connectorgraphicitemsettings.cpp  connectorgraphicitemsettings.h  connectoritemsettings.cpp  connectoritemsettings.h  connectoritemsettings.ui  cornerdots.cpp  cornerdots.h  rectgraphicitem.cpp  rectgraphicitem.h  rectgraphicitemsettings.cpp  rectgraphicitemsettings.h  rectitemsettings.ui  selectionrect.cpp  selectionrect.h
forms/: addattributedialog.cpp  addattributedialog.h  addattributedialog.ui  config_types.cpp  config_types.h  config_types.ui  entitynamedialog.cpp  entitynamedialog.h  entitynamedialog.ui  parametersdialog.cpp  parametersdialog.h  parametersdialog.ui  redactdialog.cpp  redactdialog.h  redactdialog.ui
